# rain-oracle-server

./: .gitmodules  Cargo.toml  Dockerfile  README.md  flake.nix  fly.toml
.github/workflows/: ci.yml
artifacts/: DecimalFloat.json
src/: lib.rs  main.rs  oracle.rs  pyth.rs  sign.rs
