[package]
name = "rain-oracle-server"
version = "0.1.0"
edition = "2021"
description = "Reference signed context oracle server for Raindex orders"
license = "MIT"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
alloy-primitives = { version = "0.8", features = ["serde"] }
alloy-signer = "0.8"
alloy-signer-local = "0.8"
alloy-sol-types = "0.8"
hex = "0.4"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
